# Nexus_system

./: .gitattributes  .gitignore  CHANGELOG.md  HANDOFF.md  README.md  ROADMAP.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  turbo.json
.claude/: settings.json
.claude/commands/: a11y.md  animate.md  build.md  deploy.md  design-system.md  gen-api.md  gen-component.md  gen-page.md  icons.md  init-module.md  release.md  responsive.md  review.md  test.md  theme.md  typecheck.md
apps/api/: package.json  tsconfig.tsbuildinfo
apps/api/src/: index.ts
apps/api/src/routes/: mcp.ts  memories.ts  workflows.ts
apps/desktop/: package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/desktop/src/: index.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/web/: .env.example  .env.local.example  next.config.js  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/about/: page.tsx
apps/web/src/app/admin/: page.tsx
apps/web/src/app/app/: page.tsx
apps/web/src/app/blog/: page.tsx
apps/web/src/app/careers/: page.tsx
apps/web/src/app/changelog/: page.tsx
apps/web/src/app/contact/: page.tsx
apps/web/src/app/docs/: page.tsx
apps/web/src/app/features/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/components/: AuthGuard.tsx  Logo.tsx  UpgradePrompt.tsx
apps/web/src/hooks/: useChat.ts
apps/web/src/lib/: admin.ts  auth.ts  usage.ts
(+39 files in other folders)
