[package]
name = "super-system"
version = "0.1.0"
description = "超級系統 Desktop App"
authors = ["Nexus AI"]
edition = "2021"

[lib]
name = "super_system_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
